clusters/my-cluster/apps/abs-bookclub/abs-bookclub.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abs-bookclub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abs-bookclub
  namespace: abs-bookclub
  labels:
    app: abs-bookclub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abs-bookclub
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: abs-bookclub
    spec:
      containers:
      - name: app
        image: ghcr.io/you-randomly/bookclub:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
            name: http
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: abs-bookclub
  namespace: abs-bookclub
  labels:
    app: abs-bookclub
spec:
  selector:
    app: abs-bookclub
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: abs-bookclub
  namespace: abs-bookclub
spec:
  hostnames:
    - abs-bookclub.lab.jake-watson.co.uk
  parentRefs:
    - name: cilium-gateway-external
      namespace: default
  rules:
    - backendRefs:
        - kind: Service
          name: abs-bookclub
          port: 80
